# taiwan-stocks-crawler

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20250425000001_initial_schema.sql  20250425171208_add_stock_price_fields.sql  20250426000000_add_stock_price_fields.sql
src/: main.rs
src/api/: routes.rs
src/api/controllers/: mod.rs  stock_price_controller.rs
src/application/dtos/: mod.rs  stock_dto.rs  stock_price_dto.rs
src/application/services/: mod.rs  notification_service.rs  stock_price_service.rs  stock_service.rs
src/domain/: mod.rs
src/domain/entities/: stock_price.rs
src/domain/models/: mod.rs  stock.rs  stock_price.rs
src/domain/repositories/: mod.rs  stock_price_repository.rs  stock_repository.rs
src/domain/services/: mod.rs
src/domain/value_objects/: date_range.rs  mod.rs
src/infra/: mod.rs
src/infra/db/: mod.rs  postgres_stock_price_repository.rs  postgres_stock_repository.rs
src/infra/external_services/: line_notification_service.rs  mod.rs  stock_crawler_service.rs
src/infrastructure/: mod.rs
src/infrastructure/external_services/: mod.rs  stock_crawler_service.rs
src/infrastructure/persistence/: database.rs  mod.rs  postgres_stock_price_repository.rs  postgres_stock_repository.rs
src/presentation/api/: api_router.rs  mod.rs
src/presentation/controllers/: mod.rs  stock_controller.rs  stock_price_controller.rs
